--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,5 +40,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
-      - run: cargo build --verbose
+      - run: cargo build --locked --verbose
       - run: cargo test --verbose
