--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -1,9 +1,10 @@
 on:
   push:
-    tags:
-      - "*"
+    branches:
+      - main
+      - master
 
-name: Publish
+name: Release Please
 
 env:
   CARGO_TERM_COLOR: always
@@ -47,7 +48,7 @@ jobs:
       created: ${{ steps.release.outputs.release_created }}
 
     steps:
-      - uses: google-github-actions/release-please-action@v3
+      - uses: googleapis/release-please-action@v4
         id: release
         with:
           release-type: rust
